--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center h-screen bg-gray-800">
+<div class="flex flex-col items-center justify-center">
   <form
     #usersForm="ngForm"
     (ngSubmit)="getUserFormData(usersForm.value)"
