--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <nav>
     <ul class="flex flex-row gap-10">
       <li><a href="">Home</a></li>
-      <li><a href="">Task</a></li>
+      <li><a href="">Tasks</a></li>
     </ul>
   </nav>
 </header>
